src/objects/Issue_Intersection__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Issues Intersection</relationshipLabel>
        <relationshipName>Issues_Intersection</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Issue Intersection</relationshipLabel>
        <relationshipName>Issue_Intersection</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Issue Intersection</relationshipLabel>
        <relationshipName>Issue_Intersection</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_for_Related_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used by Deliverable Wizard to auto-populate Issues based on items such as User, Department</inlineHelpText>
        <label>Default for Related Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deliverable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deliverable</label>
        <referenceTo>Deliverable__c</referenceTo>
        <relationshipLabel>Issues Intersection</relationshipLabel>
        <relationshipName>Issues_Intersection</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Issue Intersection</relationshipLabel>
        <relationshipName>Issue_Intersection</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issue_Type__c</fullName>
        <formula>TEXT(Issue__r.Taxonomy__c)</formula>
        <label>Issue Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Issue</label>
        <referenceTo>Issue__c</referenceTo>
        <relationshipLabel>Issue Intersection</relationshipLabel>
        <relationshipName>Issue_Intersection</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Metric__c</fullName>
        <label>Metric</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outreach</label>
        <referenceTo>Outreach__c</referenceTo>
        <relationshipLabel>Issues Intersection</relationshipLabel>
        <relationshipName>Issues_Intersection</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Issues Intersection</relationshipLabel>
        <relationshipName>Issues_Intersection</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <inlineHelpText>To facilitate searching for Wizards, store Ids of related objects in single field</inlineHelpText>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Name__c</fullName>
        <label>Record Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Issue Intersection</label>
    <nameField>
        <displayFormat>ISS_LINK-{000000}</displayFormat>
        <label>Issue Intersection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issues Intersection</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>